# smelt

./: Cargo.toml  README.md
crates/engine/: Cargo.toml
crates/engine/src/: agent.rs  config_file.rs  image.rs  lib.rs  log.rs  permissions.rs  pricing.rs  provider.rs
crates/engine/src/provider/: anthropic.rs  chat_completions.rs  codex.rs  extract.rs  mod.rs  openai.rs  sse.rs
crates/engine/src/tools/: ask_user_question.rs  background.rs  bash.rs  bash_background.rs  edit_file.rs  exit_plan_mode.rs  glob.rs  grep.rs  mod.rs  read_file.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  completer.rs  config.rs  custom_commands.rs  keymap.rs  lib.rs  metrics.rs  session.rs  theme.rs  utils.rs  vim.rs
crates/tui/src/app/: agent.rs  commands.rs  events.rs  history.rs  mod.rs
crates/tui/src/input/: mod.rs  settings.rs
crates/tui/src/render/: blocks.rs  cache.rs  dialogs.rs  highlight.rs  mod.rs  prompt.rs  working.rs
crates/tui/src/render/dialogs/: agents.rs  confirm.rs  help.rs  mod.rs  permissions.rs  ps.rs  question.rs  resume.rs  rewind.rs
crates/tui/tests/: dialog_lifecycle.rs  scrollback_integrity.rs  status_bar.rs
crates/tui/tests/harness/: mod.rs
docs/: zensical.toml
docs/docs/advanced/: sessions.md
docs/docs/guide/: getting-started.md
docs/docs/reference/: cli.md  commands.md  configuration.md
src/: app.rs  main.rs  setup.rs
src/render/: blocks.rs  dialogs.rs  mod.rs
src/tools/: background.rs
tasks/20260331-010421/: TASK.md
