[workspace]
members = ["crates/protocol", "crates/engine", "crates/tui"]

[package]
name = "agent"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
protocol = { path = "crates/protocol" }
engine = { path = "crates/engine" }
tui = { path = "crates/tui" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2", "native-tls"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
