[package]
name = "engine"
version = "0.1.5"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
glob = "0.3"
scraper = "0.25.0"
htmd = "0.5.0"
url = "2.5.8"
base64 = "0.22.1"
thiserror = "2.0.18"
