[package]
name = "engine"
version = "0.2.8"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "charset", "http2", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
glob = "0.3"
scraper = "0.26.0"
url = "2.5.8"
base64 = "0.22.1"
thiserror = "2.0.18"
futures-util = "0.3.32"
libc = "0.2.183"
rmcp = { version = "1", default-features = false, features = ["client", "transport-child-process"] }
sha2 = "0.11.0"
rand = "0.10.0"
keyring = "3.6.3"
