[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
engine = { path = "../engine" }
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
glob = "0.3"
futures-util = "0.3.32"
syntect = "5.3.0"
comfy-table = "7.2.2"
two-face = "0.5.1"
similar = "2.7.0"
arboard = "3.6.1"
reqwest = { version = "0.13", features = ["json"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
base64 = "0.22.1"
