[package]
name = "tui"
version = "0.4.3"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
engine = { path = "../engine" }
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
glob = "0.3"
futures-core = "0.3"
syntect = "5.3.0"
two-face = "0.5.1"
similar = "2.7.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2", "rustls"] }
base64 = "0.22.1"
unicode-width = "0.2.2"
sha2 = "0.10.9"
tempfile = "3.27.0"
libc = "0.2.183"
flate2 = "1.1.9"

[dev-dependencies]
vt100 = "0.16.2"
